<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.flexibledata</groupId>
	<artifactId>data-access-java</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<java.version>1.7</java.version>
		<maven.version.range>[3.0.4,)</maven.version.range>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.locale>zh_CN</project.build.locale>

		<lombok.version>1.16.4</lombok.version>
		<guava.version>18.0</guava.version>
		<common-lang3>3.6</common-lang3>
		<commons-pool.version>1.6</commons-pool.version>
		<commons-dbcp2.version>2.2.0</commons-dbcp2.version>
		<gson.version>2.6.1</gson.version>
		<curator.version>2.10.0</curator.version>
		<logback.version>1.1.2</logback.version>
		<slf4j.version>1.7.7</slf4j.version>
		<groovy.version>2.4.5</groovy.version>
		<snakeyaml.version>1.16</snakeyaml.version>
		<netty.version>4.1.16.Final</netty.version>
		<spring-boot.version>1.5.6.RELEASE</spring-boot.version>
		<mysql-connector-java.version>5.1.30</mysql-connector-java.version>
		<h2.version>1.4.196</h2.version>
		<postgresql.version>9.1-901-1.jdbc4</postgresql.version>
		<mssql.version>6.1.7.jre7-preview</mssql.version>
		<hikari-cp.version>2.4.11</hikari-cp.version>
		<junit.version>4.12</junit.version>
		<hamcrest.version>1.3</hamcrest.version>
		<dbunit.version>2.5.3</dbunit.version>
		<mockito.version>2.7.21</mockito.version>
		<grpc.version>1.7.0</grpc.version>
		<protobuf.version>3.4.0</protobuf.version>
		<guava-retrying.version>2.0.0</guava-retrying.version>
		<quartz.version>2.3.0</quartz.version>
		<opentracing.version>0.30.0</opentracing.version>
		<geoip2.version>2.12.0</geoip2.version>

		<maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
		<maven-assembly-plugin.version>3.1.0</maven-assembly-plugin.version>
		<maven-resources-plugin.version>2.7</maven-resources-plugin.version>
		<maven-jar-plugin.version>2.6</maven-jar-plugin.version>
		<maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
		<maven-site-plugin.version>3.4</maven-site-plugin.version>
		<maven-enforcer-plugin.version>1.4</maven-enforcer-plugin.version>
		<maven-project-info-reports-plugin.version>2.8</maven-project-info-reports-plugin.version>
		<maven-plugin-plugin.version>3.4</maven-plugin-plugin.version>
		<maven-source-plugin.version>2.4</maven-source-plugin.version>
		<maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
		<lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
		<cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
		<jacoco.version>0.7.9</jacoco.version>
		<findbugs-maven-plugin.version>3.0.2</findbugs-maven-plugin.version>
		<maven-checkstyle-plugin.version>2.16</maven-checkstyle-plugin.version>
		<maven-pmd-plugin.version>3.5</maven-pmd-plugin.version>
		<jdepend-maven-plugin.version>2.0</jdepend-maven-plugin.version>
		<taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
		<protobuf-maven-plugin.version>0.5.0</protobuf-maven-plugin.version>
		<os-maven-plugin.version>1.5.0.Final</os-maven-plugin.version>
		<coveralls-maven-plugin.version>4.1.0</coveralls-maven-plugin.version>
		<commons-codec.version>1.10</commons-codec.version>
		<atomikos.version>4.0.4</atomikos.version>
		<javax.transaction.version>1.1</javax.transaction.version>

	</properties>


	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-aop</artifactId>
			<version>${spring-boot.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.aspectj</groupId>
					<artifactId>aspectjweaver</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjrt</artifactId>
			<version>1.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.aspectj</groupId>
			<artifactId>aspectjweaver</artifactId>
			<version>1.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>${gson.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
		<dependency>
			<groupId>com.maxmind.geoip2</groupId>
			<artifactId>geoip2</artifactId>
			<version>${geoip2.version}</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${mysql-connector-java.version}</version>
		</dependency>
		<dependency>
			<groupId>javax.persistence</groupId>
			<artifactId>persistence-api</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>5.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka-clients</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
	</dependencies>


	<build>
		<extensions>
			<extension>
				<groupId>kr.motd.maven</groupId>
				<artifactId>os-maven-plugin</artifactId>
				<version>${os-maven-plugin.version}</version>
			</extension>
		</extensions>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<testSource>${java.version}</testSource>
						<testTarget>${java.version}</testTarget>
					</configuration>
					<version>${maven-compiler-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven-jar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>${maven-site-plugin.version}</version>
					<configuration>
						<locales>${project.build.locale}</locales>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>${lifecycle-mapping.version}</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-plugin-plugin</artifactId>
										<versionRange>[1.0.0,)</versionRange>
										<goals>
											<goal>descriptor</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>${maven-plugin-plugin.version}</version>
					<configuration>
						<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
					</configuration>
					<executions>
						<execution>
							<id>default-descriptor</id>
							<phase>process-classes</phase>
						</execution>
					</executions>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${maven-source-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
				<configuration>
					<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
				<configuration>
					<aggregate>true</aggregate>
					<charset>${project.build.sourceEncoding}</charset>
					<encoding>${project.build.sourceEncoding}</encoding>
					<docencoding>${project.build.sourceEncoding}</docencoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>${maven-jxr-plugin.version}</version>
				<reportSets>
					<reportSet>
						<id>aggregate</id>
						<inherited>false</inherited>
						<reports>
							<report>aggregate</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>${findbugs-maven-plugin.version}</version>
				<configuration>
					<xmlOutput>true</xmlOutput>
					<effort>Max</effort>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${maven-checkstyle-plugin.version}</version>
				<configuration>
					<configLocation>src/resources/dd_checks.xml</configLocation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${maven-pmd-plugin.version}</version>
				<configuration>
					<aggregate>true</aggregate>
					<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
					<targetJdk>${java.version}</targetJdk>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jdepend-maven-plugin</artifactId>
				<version>${jdepend-maven-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<version>${taglist-maven-plugin.version}</version>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<repositories>
		<repository>
			<id>alfresco-maven-repo</id>
			<url>https://maven.alfresco.com/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>java-net</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		<repository>
			<id>terracotta-releases</id>
			<url>http://terracotta.org/download/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

	<url>http://flexibledata.io</url>
	<description>Data Sync、Data Search、Data Analyze's Solution</description>
	<licenses>
		<license>
			<name>Apache License 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:https://github.com/flexible-data/data-access</connection>
		<developerConnection>scm:https://github.com/flexible-data/data-access</developerConnection>
		<url>https://github.com/flexible-data/data-access</url>
	</scm>

	<mailingLists>
		<mailingList>
			<name>Tanjie</name>
			<post>584135970@qq.com</post>
		</mailingList>
	</mailingLists>

	<developers>
		<developer>
			<id>tanjie</id>
			<name>TanJie</name>
			<email>584135970@qq.com</email>
			<timezone>8</timezone>
		</developer>
	</developers>

	<distributionManagement>
		<snapshotRepository>
			<id>sonatype-nexus-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>sonatype-nexus-releases</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
		</repository>
	</distributionManagement>
</project>